# codex_control_agent

./: .gitignore  README.md  pyproject.toml
docs/: NEXT_STEP.md  STEP_01.md  STEP_02.md  STEP_03.md  STEP_04.md  STEP_05.md
prompts/: README.md  example_prompt.txt
src/codex_control_agent/: __main__.py  cli.py
