[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "codex-control-agent"
version = "0.1.0"
description = "Bare-bones controller scaffold for Codex CLI workflows"
readme = "README.md"
requires-python = ">=3.11"
dependencies = []

[project.scripts]
codex-control-agent = "codex_control_agent.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
